--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -228,6 +228,8 @@ footer {
     padding-left: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
+    visibility: visible;
+    opacity: 100;
   }
 
   .imgDescriptionGit {
@@ -238,6 +240,8 @@ footer {
     padding-left: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
+    visibility: visible;
+    opacity: 100;
   }
 
   .imgMysite {
